# Kideny-Stone-Classification

./: README.md  app.py  efficient-net.ipynb  pyproject.toml  watershed-segmentation.ipynb
