[tool.poetry]
name = "muj-hackathon"
version = "0.1.0"
description = ""
authors = ["Shivansh Goel <shivanshgoel009@gmail.com>"]
readme = "README.md"
packages = [{include = "muj_hackathon"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.2"
pandas = "^1.5.3"
seaborn = "^0.12.2"
opencv-python = "^4.7.0.72"
scikit-learn = "^1.2.1"
gradio = "^3.20.0"
tensorflow = "2.9.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
